[package]
name = "stateless-contracts"
version = "0.2.0"
authors = ["mykle hansen for STATELESS <mykle@mykle.com>"]
edition = "2021"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true


[dev-dependencies]
near-sdk = "4.0.0-pre.6"
near-sdk-sim = "4.0.0-pre.6"
distrotron = { path = "./distrotron" }

[workspace]
members = [
  "distrotron","stub"
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
